SONAR-5751 Table headers don't wrap correctly in printable version

--- a/server/sonar-web/src/main/less/layout.less
+++ b/server/sonar-web/src/main/less/layout.less
@@ -35,6 +35,11 @@
   #content {
     margin-left: 0 !important;
   }
+
+  .widget thead {
+    // Fix for phantomjs bug about wrapping tables
+    display: table-row-group;
+  }
 }
 
 @media screen {
